ccache news
===========


Unreleased
----------

Bug fixes
~~~~~~~~~

- Support external zlib in nonstandard directory.


ccache 3.2.2
------------
Release date: 2015-05-10


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for `CCACHE_COMPILERCHECK=string:<value>`. This is a faster
  alternative to `CCACHE_COMPILERCHECK=<command>` if the command's output can
  be precalculated by the build system.

- Add support for caching code coverage results (compiling for gcov).


Bug fixes
~~~~~~~~~

- Fixed bug which could result in false cache hits when source code contains
  `'"'` followed by `" /*"` or `" //"` (with variations).

- Made hash of cached result created with and without `CCACHE_CPP2` different.
  This makes it possible to rebuild with `CCACHE_CPP2` set without having to
  clear the cache to get new results.

- Don't try to reset a non-existing stats file. This avoids ``No such file or
  directory'' messages in the ccache log when the cache directory doesn't
  exist.

- Fixed a bug where ccache deleted clang diagnostics after compiler failures.

- Avoid performing an unnecessary copy of the object file on a cache miss.

- Bail out on too hard compiler option `-fmodules`.

- Bail out on too hard compiler option `-fplugin=libcc1plugin` (interaction
  with GDB).

- Fixed build error when compiling ccache with recent clang versions.

- Removed signal-unsafe code from signal handler.

- Corrected logic for when to output cached stderr.

- Wipe the whole cached result on failure retrieving a cached file.

- Fixed build error when compiling ccache with recent clang versions.


ccache 3.2.1
------------
Release date: 2014-12-10


Bug fixes
~~~~~~~~~

- Fixed regression in temporary file handling, which lead to incorrect
  permissions for stats, manifest and ccache.conf files in the cache.

- `CACHEDIR.TAG` files are now created in the [0-9a-f] subdirectories so that
  ccache.conf is not lost in backups.
